# PySentinel

./: CHANGELOG.md  LICENSE  README.md  build_wheelhouse.bat  install_windows.bat  pyproject.toml  requirements-tools.txt  run_app.bat  run_debug.bat
docs/: ARCHITECTURE.md  DIAGNOSTICS.md  SECURITY_MODEL.md
pysentinel/: app.py  external_tools.py  i18n.py  logging_utils.py  main_window.py  models.py  reporting.py  scan_engine.py  settings.py  themes.py
pysentinel/resources/lang/: de.json  en.json  fr.json  ru.json
pysentinel/resources/themes/: aurora.qss  dark.qss  hellfire.qss  light.qss  matrix.qss  ocean.qss  purple.qss  sepia.qss
pysentinel/scanners/: __init__.py  dependencies.py  inventory.py  pickle_scan.py  source_code.py
tests/: test_filter_boolean.py  test_pickle_scan.py
